Footer: fixed alignment of copyright on desktop

--- a/components/_footer.scss
+++ b/components/_footer.scss
@@ -67,7 +67,7 @@
 
     .siteinfo {
         float: right;
-        margin-right: 85px;
+        margin-right: 95px;
         color: #fff;
         font-size: 70%;
         text-align: left;
