--- a/style.css
+++ b/style.css
@@ -481,7 +481,7 @@ h2.page-title span {
     margin: 47px 0 20px 0; }
   #footer .siteinfo {
     float: right;
-    margin-right: 85px;
+    margin-right: 95px;
     color: #fff;
     font-size: 70%;
     text-align: left;
